packages/cargo_tools_macros/tests/ui/wasm_async_trait_const.stderr
error: wasm_async_trait can only be applied to trait definitions or trait implementations
 --> tests/ui/wasm_async_trait_const.rs:5:1
  |
5 | const INVALID_CONST: i32 = 42;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
